tests/transpiler/x/java/left_join_multi.error
exit status 1
Main.java:34: error: <identifier> expected
         orderId;
                ^
Main.java:35: error: <identifier> expected
         name;
             ^
Main.java:36: error: <identifier> expected
         item;
             ^
Main.java:37: error: <identifier> expected
        Data4( orderId,  name,  item) {
                      ^
Main.java:37: error: <identifier> expected
        Data4( orderId,  name,  item) {
                             ^
Main.java:37: error: <identifier> expected
        Data4( orderId,  name,  item) {
                                    ^
Main.java:45: error: <identifier> expected
         orderId;
                ^
Main.java:46: error: <identifier> expected
         name;
             ^
Main.java:47: error: <identifier> expected
         item;
             ^
Main.java:48: error: <identifier> expected
        Result5( orderId,  name,  item) {
                        ^
Main.java:48: error: <identifier> expected
        Result5( orderId,  name,  item) {
                               ^
Main.java:48: error: <identifier> expected
        Result5( orderId,  name,  item) {
                                      ^
12 errors
